--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -8,7 +8,8 @@
 .items-con{
     display:flex;
     flex-direction:row;
-    justify-content:space-evenly;
+    justify-content:space-around;
+    
 }
 .img1{
     width:50px;
@@ -17,12 +18,13 @@
 .img2{
     width:40px;
     height:30px;
+    margin-left:5px;
 }
 .img3{
     width:127px;
     height:58px;
-   
-    margin-right:10px;
+   margin-right:10px;
+    
   
    
 }
@@ -64,7 +66,12 @@
 .btn-flex{
     display:flex;
     justify-content:space-evenly;
-    margin-top: 10px;
+    margin-top:20px;
+    
+   
+   
+  
+   
 }
 .green-btn{
     background-color: #28C590;
@@ -90,10 +97,11 @@
     border-width:0px;
     border-radius:16px;
     font-weight:bold;
+    margin:10px;
 }
 .btns-arrange{
     display:flex;
-   align-items:flex-start;
+  
    justify-content: space-around;
 
 }
@@ -131,6 +139,8 @@
 .video-flex{
     display:flex;
     flex-direction:row;
+    margin-right:10px;
+    
 }
 .pad-it{
     padding-top:20px;
@@ -143,6 +153,9 @@
     padding:10px;
     border-width:0px;
     border-radius:16px;
+    margin:10px;
+    
+    
 
 }
 .vector{
@@ -158,6 +171,8 @@
     height:110px;
     background-color:#F2F8FF;
     border-radius:16px;
+    padding:5px;
+   
 }
 @media only screen and (max-width: 600px) {
   
@@ -177,6 +192,8 @@
   
     .btn-flex {
       flex-direction: column;
+      margin-top:20px;
+      
     }
   
     .btn1,
